@@ -1,3 +1,8 @@
+2011-07-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-epg.el (mime-preview-application/*-signature): Result
+	string always terminates with LF.
+
 2011-06-24  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-edit.el (mime-edit-sign-pgp-nonmime): Renamed from
